--- a/css/main.css
+++ b/css/main.css
@@ -650,7 +650,7 @@ h2.galeriavideoTitulo {
     height: auto;
     align-items: center;
     text-align: center;
-    font-size: 1.2%;
+    font-size: 1.4rem;
   }
   .estuvimosenContainer .mediaParrafosestuvimosen {
     display: flex;
