--- a/scss/_estuvimos-en.scss
+++ b/scss/_estuvimos-en.scss
@@ -116,7 +116,7 @@ $estilos: (
       height: auto;
       align-items: center;
       text-align: center;
-      font-size: 1.2%;
+      font-size: 1.4rem;
     }
     
     & .mediaParrafosestuvimosen{
