--- a/scss/_gastronomia.scss
+++ b/scss/_gastronomia.scss
@@ -83,6 +83,9 @@
 
 /* *******RESPONSIVE GASTRONOMIA******** */
 @media only screen and (max-width: 600px) {
+    .over{
+    overflow-x: hidden;
+    }
     .media__Gastronomia{
       display: flex;
       flex-direction: column;
