--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,21 +3,31 @@
 
 $fontsize: 1.3rem;
 $border-radius: 30px;
-$margin: 20px 0 20px 0;
-$padding: 20px 0 20px 0;
+$margin: 2rem;
+$padding: 2rem;
 
 @mixin parrafo () {
   display: flex;
-    width: 80vw;
+    width: 90vw;
     height: auto;
     box-shadow: 3px 3px 15px 15px #feecaa;
     text-align: justify;
+    top: 1rem;
+    bottom: 2rem;
     font-size: $fontsize;
     border-radius: $border-radius;
     margin: $margin;
     padding: $padding;
-  } 
-
+    & :hover{
+    border-radius:30px;
+    -webkit-border-radius:30px;
+    box-shadow: 0px 0px 15px 15px black;
+    -webkit-box-shadow: 0px 0px 15px 15px black;
+    padding: $padding;
+    margin: $margin;
+    }
+} 
+   
   
 .headerContainer{
     display: flex;
@@ -43,6 +53,10 @@ $padding: 20px 0 20px 0;
       }
   
       @media only screen and (max-width: 600px) {
+
+      .over{
+        overflow-x: hidden;
+      }  
       & div.mediaLogouno {
             flex-direction: column;
             justify-content: start;
@@ -75,6 +89,7 @@ $padding: 20px 0 20px 0;
       text-align: center;
       justify-content: center;
       font-size: 200%;
+      top: 1rem;
       }
   
      
@@ -83,6 +98,7 @@ $padding: 20px 0 20px 0;
       flex-flow: row wrap;
       text-align: center;
       font-size: 150%;
+      top: 1rem;
       }
   }
   
@@ -159,8 +175,8 @@ $padding: 20px 0 20px 0;
       margin-top: 0;
   
       & .flex-containerImgb{
-          width: 90vw;
-          height: 60vh;
+          width: 80vw;
+          height: 70vh;
       
       }
 
@@ -171,9 +187,10 @@ $padding: 20px 0 20px 0;
         }
       }
 
-      .parrafo__Uno{
+      & .parrafo__Uno{
         @include parrafo();
       }
+      
   
       & .flex-containerText{
           width: 75vw;
@@ -232,9 +249,7 @@ $padding: 20px 0 20px 0;
           }
         }
       }
-      
-  
-  
+    
   
   
   h2.titulo__Galeria{
@@ -354,13 +369,25 @@ $padding: 20px 0 20px 0;
        & ul#efecthover li a:hover:before{
        max-width:100%;
        }
-  
+      // efecto iconos en redes sociales que impactan en las demas paginas
       & .footer__redes{
+          display: flex;
           text-align: center;
+          align-content: center;
+          justify-content: space-evenly;
+          padding: 1rem;
           width: 100%;
-          height: 8%;
+          height: 10%;
+      }
+      & .image:hover{
+          border-radius:20%;
+          -webkit-border-radius:20%;
+          box-shadow: 15px 15px 15px 15px black;
+          -webkit-box-shadow: 0px 0px 15px 15px black;
+          
+       }
               
-          }
+          
   
       & .footer__webdesing{
           width: 100%;
