--- a/scss/_nuestroproyecto.scss
+++ b/scss/_nuestroproyecto.scss
@@ -56,6 +56,9 @@
 
     /* *******RESPONSIVE NUESTRO PROYECTO******** */
     @media only screen and (max-width: 480px) {
+      .over{
+        overflow-x: hidden;
+      }
     .medianuestroProy {
       display: flex;
       flex-flow: column;
