--- a/scss/_sobre-nosotros.scss
+++ b/scss/_sobre-nosotros.scss
@@ -56,6 +56,9 @@
       
     /* *******RESPONSIBE SOBRE NOSOTROS******** */
 @media only screen and (max-width: 600px) {
+    .over{
+      overflow-x: hidden;
+    }
     .mediaNosotros {
       display: flex;
       flex-flow: column;
