correccion width sobre nosotros

--- a/css/main.css
+++ b/css/main.css
@@ -450,6 +450,7 @@ h2.galeriavideoTitulo {
 @media only screen and (max-width: 600px) {
   .flexContainersobnos .mediaNosotros {
     display: flex;
+    width: 100%;
     justify-content: center;
     text-align: center;
     overflow-x: hidden;
@@ -458,7 +459,7 @@ h2.galeriavideoTitulo {
     display: flex;
     justify-content: center;
     width: 350px;
-    height: 250px;
+    height: 200px;
   }
   .flexContainersobnos .mediaTitulo {
     display: flex;
