--- a/css/main.css
+++ b/css/main.css
@@ -450,28 +450,36 @@ h2.galeriavideoTitulo {
 @media only screen and (max-width: 600px) {
   .flexContainersobnos .mediaNosotros {
     display: flex;
-    width: 100%;
+    flex-flow: column;
     justify-content: center;
     text-align: center;
-    overflow-x: hidden;
   }
   .flexContainersobnos .mediaImgnosotros {
     display: flex;
+    flex-flow: column;
     justify-content: center;
-    width: 350px;
-    height: 200px;
+    width: 90vw;
+    height: 40vh;
+    margin-top: 2%;
+    margin-bottom: 2%;
   }
   .flexContainersobnos .mediaTitulo {
     display: flex;
+    flex-flow: column;
     justify-content: center;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 150%;
+    margin-top: 4%;
+    margin-bottom: 4%;
   }
   .flexContainersobnos .mediaSubtitulos {
     display: flex;
+    flex-flow: column;
     justify-content: center;
     text-align: center;
-    font-size: 1rem;
+    font-size: 130%;
+    margin-top: 4%;
+    margin-bottom: 4%;
   }
 }
 
@@ -540,9 +548,6 @@ h2.galeriavideoTitulo {
   margin-bottom: 3%;
 }
 @media only screen and (max-width: 480px) {
-  .nuestroproy__Container .over {
-    overflow-x: hidden;
-  }
   .nuestroproy__Container .medianuestroProy {
     display: flex;
     flex-flow: column;
