--- a/scss/_sobre-nosotros.scss
+++ b/scss/_sobre-nosotros.scss
@@ -58,30 +58,38 @@
 @media only screen and (max-width: 600px) {
     .mediaNosotros {
       display: flex;
-      width: 100%;
+      flex-flow: column;
       justify-content: center;
       text-align: center;
-      overflow-x: hidden;
         
     }
     .mediaImgnosotros{
       display: flex;
+      flex-flow: column;
       justify-content: center;
-      width: 350px;
-      height: 200px;
+      width: 90vw;
+      height: 40vh;
+      margin-top: 2%;
+      margin-bottom: 2%;
     }
     .mediaTitulo{
       display: flex;
+      flex-flow: column;
       justify-content: center;
       text-align: center;
-      font-size: 1.2rem;
+      font-size: 150%;
+      margin-top: 4%;
+      margin-bottom: 4%;
      
     }
     .mediaSubtitulos{
       display: flex;
+      flex-flow: column;
       justify-content: center;
       text-align: center;
-      font-size: 1rem;
+      font-size: 130%;
+      margin-top: 4%;
+      margin-bottom: 4%;
     }
     }
   }
