--- a/scss/_sobre-nosotros.scss
+++ b/scss/_sobre-nosotros.scss
@@ -8,6 +8,7 @@
     width: 100%;
     align-items: center;
     text-align: center;
+    overflow-x: hidden;
 
     & .titulo{
         font-size: 1.8rem;
