--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,7 @@ h2.galeriavideoTitulo {
   width: 100%;
   align-items: center;
   text-align: center;
+  overflow-x: hidden;
   /* *******RESPONSIBE SOBRE NOSOTROS******** */
 }
 .flexContainersobnos .titulo {
@@ -547,7 +548,7 @@ h2.galeriavideoTitulo {
   margin-top: 3%;
   margin-bottom: 3%;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
   .nuestroproy__Container .medianuestroProy {
     display: flex;
     flex-flow: column;
