--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,8 @@ h2.galeriavideoTitulo {
   /* *******RESPONSIBE SOBRE NOSOTROS******** */
 }
 .flexContainersobnos .titulo {
+  display: flex;
+  flex-direction: column;
   font-size: 1.8rem;
   width: 100vw;
   height: 10%;
@@ -401,6 +403,8 @@ h2.galeriavideoTitulo {
   background-color: #feecaa;
 }
 .flexContainersobnos .subtitulos {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   font-size: 1.5rem;
   font-weight: 600;
