--- a/scss/_sobre-nosotros.scss
+++ b/scss/_sobre-nosotros.scss
@@ -11,6 +11,8 @@
     overflow-x: hidden;
 
     & .titulo{
+      display: flex;
+      flex-direction: column;
         font-size: 1.8rem;
         width: 100vw;
         height: 10%;
@@ -19,6 +21,8 @@
         
         }
     & .subtitulos{
+        display: flex;
+        flex-direction: column;
         text-align: center;
         font-size: 1.5rem;
         font-weight: 600;
