--- a/css/main.css
+++ b/css/main.css
@@ -603,34 +603,30 @@ h2.galeriavideoTitulo {
 .estuvimosenContainer {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   width: 100%;
-  height: auto;
   align-items: center;
+  text-align: center;
   /* *******RESPONSIVE ESTUVIMOS EN******** */
 }
 .estuvimosenContainer .estuvimosen__Foto {
-  display: flex;
-  justify-content: center;
+  align-content: center;
+  margin-bottom: 3%;
+  margin-top: 3%;
 }
 .estuvimosenContainer .estuvimosen__Titulo {
-  display: flex;
-  font-size: 2.3rem;
-  width: 100%;
+  font-size: 150%;
+  width: 100vw;
   height: 10%;
   text-align: center;
   background-color: #feecaa;
-  font-weight: 700;
-  margin-top: 3%;
-  margin-bottom: 3%;
 }
 .estuvimosenContainer .estuvimosen__Subtitulos {
   text-align: center;
-  font-size: 180%;
+  font-size: 1.5rem;
   font-weight: 600;
   width: 100vw;
   background: #feecaa;
-  margin-top: 2%;
-  margin-bottom: 2%;
 }
 .estuvimosenContainer .estuvimosen__Encabezados {
   display: flex;
@@ -683,32 +679,38 @@ h2.galeriavideoTitulo {
   margin-bottom: 2%;
 }
 @media only screen and (max-width: 600px) {
-  .estuvimosenContainer .over {
-    overflow-x: hidden;
-  }
   .estuvimosenContainer .media__Estuvimosen {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
+    flex-flow: column;
+    justify-content: center;
+    text-align: center;
   }
   .estuvimosenContainer .mediaFoto__estuvimosen {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
     width: 90vw;
     height: 40vh;
+    margin-top: 2%;
+    margin-bottom: 2%;
   }
   .estuvimosenContainer .mediaTitulo__estuvimosen {
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
+    flex-flow: column;
+    justify-content: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 150%;
+    margin-top: 4%;
+    margin-bottom: 4%;
   }
   .estuvimosenContainer .mediaSubtitulos__estuvimosen {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-flow: column;
+    justify-content: center;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 130%;
+    margin-top: 4%;
+    margin-bottom: 4%;
   }
   .estuvimosenContainer .mediaEncabezados__estuvimosen {
     display: flex;
