--- a/scss/_estuvimos-en.scss
+++ b/scss/_estuvimos-en.scss
@@ -11,37 +11,33 @@ $estilos: (
 );
 
 .estuvimosenContainer{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+  text-align: center;
 
     & .estuvimosen__Foto{
-        display: flex;
-        justify-content: center;
+      align-content: center;
+      margin-bottom: 3%;
+      margin-top: 3%;
       }
     & .estuvimosen__Titulo{
-        display: flex;
-        font-size: 2.3rem;
-        width: 100%;
-        height: 10%;
-        text-align: center;
-        background-color: #feecaa;
-        font-weight: 700;
-        margin-top: 3%;
-        margin-bottom: 3%;
+      font-size: 150%;
+      width: 100vw;
+      height: 10%;
+      text-align: center;
+      background-color: #feecaa;
         
         }
 
     & .estuvimosen__Subtitulos{
-        text-align: center;
-        font-size: 180%;
-        font-weight: 600;
-        width: 100vw;
-        background: #feecaa;
-        margin-top: 2%;
-        margin-bottom: 2%;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: 600;
+      width: 100vw;
+      background: #feecaa;
         }
 
     & .estuvimosen__Encabezados{
@@ -82,35 +78,41 @@ $estilos: (
 
 /* *******RESPONSIVE ESTUVIMOS EN******** */
 @media only screen and (max-width: 600px) {
-    .over{
-    overflow-x: hidden;
-    }
     .media__Estuvimosen{
       display: flex;
-      flex-direction: column;
-      width: 100%;
-      align-items: center;
+      flex-flow: column;
+      justify-content: center;
+      text-align: center;
         
     }
     & .mediaFoto__estuvimosen{
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
       width: 90vw;
       height: 40vh;
+      margin-top: 2%;
+      margin-bottom: 2%;
     }
     & .mediaTitulo__estuvimosen{
       display: flex;
-      flex-flow: row wrap;
-     align-items: center;
+      flex-flow: column;
+      justify-content: center;
       text-align: center;
-      font-size: 2rem;
+      font-size: 150%;
+      margin-top: 4%;
+      margin-bottom: 4%;
      
     }
     
     & .mediaSubtitulos__estuvimosen{
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      flex-flow: column;
+      justify-content: center;
       text-align: center;
-      font-size: 1.5rem;
+      font-size: 130%;
+      margin-top: 4%;
+      margin-bottom: 4%;
     }
     & .mediaEncabezados__estuvimosen{
       display: flex;
