--- a/css/main.css
+++ b/css/main.css
@@ -603,30 +603,34 @@ h2.galeriavideoTitulo {
 .estuvimosenContainer {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   width: 100%;
+  height: auto;
   align-items: center;
-  text-align: center;
   /* *******RESPONSIVE ESTUVIMOS EN******** */
 }
 .estuvimosenContainer .estuvimosen__Foto {
-  align-content: center;
-  margin-bottom: 3%;
-  margin-top: 3%;
+  display: flex;
+  justify-content: center;
 }
 .estuvimosenContainer .estuvimosen__Titulo {
-  font-size: 150%;
-  width: 100vw;
+  display: flex;
+  font-size: 2.3rem;
+  width: 100%;
   height: 10%;
   text-align: center;
   background-color: #feecaa;
+  font-weight: 700;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 .estuvimosenContainer .estuvimosen__Subtitulos {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 180%;
   font-weight: 600;
   width: 100vw;
   background: #feecaa;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 .estuvimosenContainer .estuvimosen__Encabezados {
   display: flex;
@@ -705,12 +709,10 @@ h2.galeriavideoTitulo {
   }
   .estuvimosenContainer .mediaSubtitulos__estuvimosen {
     display: flex;
-    flex-flow: column;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    font-size: 130%;
-    margin-top: 4%;
-    margin-bottom: 4%;
+    font-size: 1.5rem;
   }
   .estuvimosenContainer .mediaEncabezados__estuvimosen {
     display: flex;
