--- a/scss/_estuvimos-en.scss
+++ b/scss/_estuvimos-en.scss
@@ -11,33 +11,37 @@ $estilos: (
 );
 
 .estuvimosenContainer{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 100%;
-  align-items: center;
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    align-items: center;
 
     & .estuvimosen__Foto{
-      align-content: center;
-      margin-bottom: 3%;
-      margin-top: 3%;
+        display: flex;
+        justify-content: center;
       }
     & .estuvimosen__Titulo{
-      font-size: 150%;
-      width: 100vw;
-      height: 10%;
-      text-align: center;
-      background-color: #feecaa;
+        display: flex;
+        font-size: 2.3rem;
+        width: 100%;
+        height: 10%;
+        text-align: center;
+        background-color: #feecaa;
+        font-weight: 700;
+        margin-top: 3%;
+        margin-bottom: 3%;
         
         }
 
     & .estuvimosen__Subtitulos{
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: 600;
-      width: 100vw;
-      background: #feecaa;
+        text-align: center;
+        font-size: 180%;
+        font-weight: 600;
+        width: 100vw;
+        background: #feecaa;
+        margin-top: 2%;
+        margin-bottom: 2%;
         }
 
     & .estuvimosen__Encabezados{
@@ -107,12 +111,10 @@ $estilos: (
     
     & .mediaSubtitulos__estuvimosen{
       display: flex;
-      flex-flow: column;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
-      font-size: 130%;
-      margin-top: 4%;
-      margin-bottom: 4%;
+      font-size: 1.5rem;
     }
     & .mediaEncabezados__estuvimosen{
       display: flex;
