--- a/css/main.css
+++ b/css/main.css
@@ -606,6 +606,7 @@ h2.galeriavideoTitulo {
   width: 100%;
   height: auto;
   align-items: center;
+  overflow-x: hidden;
   /* *******RESPONSIVE ESTUVIMOS EN******** */
 }
 .estuvimosenContainer .estuvimosen__Foto {
@@ -688,6 +689,7 @@ h2.galeriavideoTitulo {
     flex-flow: column;
     justify-content: center;
     text-align: center;
+    overflow-x: hidden;
   }
   .estuvimosenContainer .mediaFoto__estuvimosen {
     display: flex;
