--- a/scss/_nuestroproyecto.scss
+++ b/scss/_nuestroproyecto.scss
@@ -62,6 +62,7 @@
       flex-flow: column;
       justify-content: center;
       text-align: center;
+      overflow-x: hidden;
         
     }
     .mediaFoto__nuestroproy{
