--- a/scss/_nuestroproyecto.scss
+++ b/scss/_nuestroproyecto.scss
@@ -8,6 +8,7 @@
     width: 100%;
     align-items: center;
     text-align: center;
+    overflow-x: hidden;
 
     & .nuestroproy__Titulo{
         font-size: 150%;
