--- a/scss/_nuestroproyecto.scss
+++ b/scss/_nuestroproyecto.scss
@@ -96,10 +96,11 @@
     }
     
     .mediaParrafosnuestroproy{
-      width: 80%;
-      height: 40%;
+      width: 90%;
+      height: auto;
       font-size: 120%;
       text-align: justify;
+      justify-content: center;
       margin-top: 4%;
       margin-bottom: 4%;
       }
