--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,8 +3,8 @@
 
 $fontsize: 1.3rem;
 $border-radius: 30px;
-$margin: 2rem;
-$padding: 2rem;
+$margin: 1rem;
+$padding: 1rem;
 
 @mixin parrafo () {
   display: flex;
@@ -12,6 +12,8 @@ $padding: 2rem;
     height: auto;
     box-shadow: 3px 3px 15px 15px #feecaa;
     text-align: justify;
+    justify-content: center;
+    justify-items: center;
     top: 1rem;
     bottom: 2rem;
     font-size: $fontsize;
