--- a/css/main.css
+++ b/css/main.css
@@ -32,10 +32,11 @@ body {
   height: 25vh;
   right: 30px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 680px) {
   .headerContainer > div:first-child:not(.container-fluid) .mediaindex {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     text-align: center;
     overflow-x: hidden;
@@ -212,7 +213,7 @@ body {
   font-family: "Yuji Syuku";
   font-size: 130%;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 680px) {
   .flex-containerContinentes .mediaContinentes {
     flex-direction: column;
     justify-content: center;
@@ -259,7 +260,7 @@ h2.galeriavideoTitulo {
   height: 50vh;
   border: 1px solid black;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 680px) {
   .videosflexContainer .mediavideosflexContainer {
     display: flex;
     flex-direction: column;
