--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -55,10 +55,11 @@ $padding: 1rem;
       right: 30px;
       }
   
-      @media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 680px) {
       & .mediaindex{
       display: flex;
-      flex-flow: column;
+      flex-direction: column;
+      flex-wrap: wrap;
       justify-content: center;
       text-align: center;
       overflow-x: hidden;
@@ -250,7 +251,7 @@ $padding: 1rem;
           font-size: 130%;
       }
     
-      @media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 680px) {
           .mediaContinentes {
               flex-direction: column;
               justify-content: center;
@@ -302,7 +303,7 @@ $padding: 1rem;
           border: 1px solid black;
       }
   
-      @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: 680px) {
           .mediavideosflexContainer{
             display: flex;
             flex-direction: column;
