--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -25,6 +25,7 @@ $padding: 2rem;
     -webkit-border-radius:30px;
     box-shadow: 0px 0px 15px 15px black;
     -webkit-box-shadow: 0px 0px 15px 15px black;
+    transition: 0.7s;
     padding: $padding;
     margin: $margin;
     }
