--- a/scss/_nuestroproyecto.scss
+++ b/scss/_nuestroproyecto.scss
@@ -53,6 +53,36 @@
         margin-bottom: 3%;
             
         }
+    
+        & .containeracordion{
+          width: 100%;
+          top: 4rem;
+          bottom: 4rem;
+          justify-items: center;
+        }
+  
+        & .bandoneon{
+          display: flex;
+          flex-direction: column;
+          flex-wrap: wrap;
+          width: 100vw;
+          height: auto;
+          background-color: #feecaa;
+          text-align: justify;
+          font-size: 1.5rem;
+          font-weight: 600;
+          color: black;
+          
+          }
+        
+        & .bandoneon__Texto{
+          font-size: 1.3rem;
+          text-align: justify;
+          background-image: linear-gradient(to right, #757F9A , #D7DDE8 );
+          :hover{
+            transition: 1s;
+          }
+        }
 
     /* *******RESPONSIVE NUESTRO PROYECTO******** */
     @media only screen and (max-width: 600px) {
