--- a/css/main.css
+++ b/css/main.css
@@ -893,6 +893,8 @@ h3.estuvimosen__Subtitulos {
   margin-bottom: 2%;
 }
 .gastronomiaContainer .containeracordion {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   top: 4rem;
   bottom: 4rem;
@@ -986,6 +988,26 @@ h3.estuvimosen__Subtitulos {
     align-items: center;
     text-align: center;
     font-size: 130%;
+  }
+  .gastronomiaContainer .mediaencabezados__Gastronomia {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 150%;
+    font-weight: 700;
+    margin-top: 3%;
+  }
+  .gastronomiaContainer .mediaparrafos__Gastronomia {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 40%;
+    font-size: 110%;
+    text-justify: newspaper;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    padding-left: 2rem;
   }
 }
 
