--- a/scss/_gastronomia.scss
+++ b/scss/_gastronomia.scss
@@ -142,6 +142,7 @@
       font-size: 150%;
       font-weight: 700;
       margin-top: 3%;
+      padding-right: 2rem;
     }
     
     & .mediaparrafos__Gastronomia{
