--- a/css/main.css
+++ b/css/main.css
@@ -1008,7 +1008,7 @@ h3.estuvimosen__Subtitulos {
     text-justify: newspaper;
     margin-top: 2%;
     margin-bottom: 2%;
-    padding-left: 3rem;
+    padding-left: 3%;
   }
 }
 
