--- a/scss/_gastronomia.scss
+++ b/scss/_gastronomia.scss
@@ -154,7 +154,7 @@
       text-justify: newspaper;
       margin-top: 2%;
       margin-bottom: 2%;
-      padding-left: 3rem;
+      padding-left: 3%;
       }
     
     }
