--- a/css/main.css
+++ b/css/main.css
@@ -876,7 +876,7 @@ h3.estuvimosen__Subtitulos {
   flex-direction: column;
   font-size: 2.3rem;
   width: 100vw;
-  height: 15vh;
+  height: 10vh;
   text-align: center;
   background-color: #feecaa;
   font-weight: 700;
@@ -891,32 +891,6 @@ h3.estuvimosen__Subtitulos {
   background: #feecaa;
   margin-top: 2%;
   margin-bottom: 2%;
-}
-.gastronomiaContainer .containeracordion {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  top: 4rem;
-  bottom: 4rem;
-  justify-items: center;
-  justify-content: center;
-}
-.gastronomiaContainer .bandoneon {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 100vw;
-  height: auto;
-  background-color: #feecaa;
-  text-align: justify;
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: black;
-}
-.gastronomiaContainer .bandoneon__Texto {
-  font-size: 1.3rem;
-  text-align: justify;
-  background-image: linear-gradient(to right, #757F9A, #D7DDE8);
 }
 .gastronomiaContainer .gastronomia__Encabezados {
   display: flex;
@@ -938,6 +912,14 @@ h3.estuvimosen__Subtitulos {
   text-shadow: -1px 0 #000, 0 3px #000, 2px 0 #000, 0 -2px #000;
   margin: 2% 0 2% 0;
   text-decoration: none;
+}
+.gastronomiaContainer .gastronomia__Parrafos {
+  width: 80%;
+  height: 40%;
+  font-size: 1.3rem;
+  text-align: justify;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 .gastronomiaContainer .parrafo__Uno {
   display: flex;
@@ -977,13 +959,10 @@ h3.estuvimosen__Subtitulos {
   }
   .gastronomiaContainer .mediaTitulo__Gastronomia {
     display: flex;
-    width: 100vw;
-    height: 20%;
     flex-direction: column;
     align-items: center;
     text-align: center;
     font-size: 150%;
-    bottom: 5%;
   }
   .gastronomiaContainer .mediasubtitulos__Gastronomia {
     display: flex;
@@ -1000,7 +979,6 @@ h3.estuvimosen__Subtitulos {
     font-size: 150%;
     font-weight: 700;
     margin-top: 3%;
-    padding-right: 5%;
   }
   .gastronomiaContainer .mediaparrafos__Gastronomia {
     display: flex;
@@ -1008,10 +986,11 @@ h3.estuvimosen__Subtitulos {
     width: 90%;
     height: 40%;
     font-size: 110%;
-    text-justify: newspaper;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
     margin-top: 2%;
     margin-bottom: 2%;
-    padding-left: 5%;
   }
 }
 
