cambios en index

--- a/css/main.css
+++ b/css/main.css
@@ -267,17 +267,18 @@ h2.galeriavideoTitulo {
     flex-direction: column;
     flex-wrap: wrap;
     width: 100vw;
-    height: auto;
-    justify-content: space-around;
+    height: 150vh;
+    justify-content: space-between;
     align-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    padding-bottom: 4vh;
   }
   .videosflexContainer .mediaGaleria__videos {
     display: flex;
     flex-direction: column;
-    width: 95%;
-    height: 40%;
+    width: 400px;
+    height: 300px;
   }
 }
 
