--- a/scss/_estuvimos-en.scss
+++ b/scss/_estuvimos-en.scss
@@ -76,7 +76,7 @@ $estilos: (
         width: 80%;
         height: 40%;
         font-size: 1.3rem;
-        text-align: justify;
+        text-align: center;
         margin-top: 2%;
         margin-bottom: 2%;
         }
