--- a/scss/_gastronomia.scss
+++ b/scss/_gastronomia.scss
@@ -72,7 +72,7 @@
     width: 80%;
     height: 40%;
     font-size: 1.3rem;
-    text-align: justify;
+    text-align: center;
     margin-top: 2%;
     margin-bottom: 2%;
     }
