--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -10,8 +10,7 @@ $padding: 2rem;
   display: flex;
     width: 90vw;
     height: auto;
-    box-shadow: 3px 3px 15px 15px #feecaa;
-    text-align: justify;
+    text-align: center;
     justify-content: center;
     justify-items: center;
     top: 2rem;
@@ -20,15 +19,9 @@ $padding: 2rem;
     border-radius: $border-radius;
     margin: $margin;
     padding: $padding;
-    & :hover{
-    border-radius:30px;
-    -webkit-border-radius:30px;
-    box-shadow: 0px 0px 15px 15px black;
-    -webkit-box-shadow: 0px 0px 15px 15px black;
-    transition: 0.7s;
     padding: $padding;
     margin: $margin;
-    }
+    
 } 
    
   
