--- a/scss/_sobre-nosotros.scss
+++ b/scss/_sobre-nosotros.scss
@@ -52,7 +52,7 @@
       
       & .bandoneon__Texto{
         font-size: 1.3rem;
-        text-align: justify;
+        text-align: center;
         background-image: linear-gradient(to right, #757F9A , #D7DDE8 );
         :hover{
           transition: 1s;
@@ -74,7 +74,7 @@
         width: 80%;
         height: 40%;
         font-size: 1.3rem;
-        text-align: justify;
+        text-align: center;
         margin-top: 2%;
         margin-bottom: 2%;
         }
